# Peak-o-CAD

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  cmake_install.cmake
src/: camera.h  main.cpp  mesh.h  primitive.h  solid_selector.h  solids.h  vertex.cpp  vertex.h  vertex_dragger.h
